@@ -38,6 +38,10 @@
 <p>2018-02-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/topol.c (ReadTOPOLImage): Detect EOF immediately rather
+than spinning.  Fixes oss-fuzz issue 6303
+&quot;graphicsmagick/coder_TOPOL_fuzzer: Timeout in
+graphicsmagick_coder_TOPOL_fuzzer&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/dcm.c (DCM_SetupRescaleMap): Avoid excessive left shift.
 Fixes oss-fuzz issue 6256 &quot;graphicsmagick/coder_DCM_fuzzer:
 Undefined-shift in DCM_SetupRescaleMap&quot;. (Credit to OSS-Fuzz)</li>
